Correct foundations 03 class selector error

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -7,7 +7,7 @@
     background-color: yellow;
 }
 
-.clickme .nome {
+.clickme, .nome {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
