--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,33 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 0.5rem;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin: 0.5rem 0;
+  padding: 0.5rem;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 0.5rem 0;
+  padding: 1rem 0.5rem;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 0.5rem 0;
+  padding: 0.5rem;
+  text-align: center;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  padding: 0.5rem 1.5rem;
 }
