--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+
+  display: flex;
+  align-items: center;
+  padding: 15px;
 }
 
 .logo {
@@ -9,11 +13,19 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  row-gap: 10px;
 }
 
 a {
