--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,22 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 15px;
+
+  display: flex;
+  align-items: flex-start;
+}
+
+.logo-wrapper {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  column-gap: 10px;
+}
+
+.profile-wrapper {
+  display: flex;
+  column-gap: 10px;
 }
 
 .profile-image {
@@ -45,4 +61,9 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  column-gap: 10px;
 }
