--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 img {
@@ -10,6 +13,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.card-wrapper {
+  text-align: center;
+  gap: 1rem;
 }
 
 /* do not edit this footer */
