--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,62 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/***** SOLUTION ******/
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.section {
+  display: flex;
+  flex: 1;
+}
+.sidebar {
+  width: 300px;
+  flex-shrink: 0;
+  padding: 1rem;
+}
+.sidebar a, .sidebar ul {
+  text-decoration: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  font-size: 24px;
+
+  color: white;
+  gap: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2rem;
+  gap: 2rem;
+  max-width: 850px;
+  max-height:fit-content;
+}
+.card {
+  padding: 1rem;
+  width: 200px;
+  height: 200px;
+}
+
+.header, .footer {
+  display: flex;
+  align-items: center;
+}
+.header {
+  font-weight: 900;
+  font-size: 32px;
+  padding-left: 1rem;
+}
+.footer {
+  justify-content: center;
+}
